fix: fix stream logic